kubernetes/helm/apps/firefly-iii/manifests/ingres.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: issuer
    nginx.org/websocket-services: firefly-iii
  name: firefly-iii
  namespace: apps
spec:
  rules:
    - host: firefly.intropin.be
      http:
        paths:
          - backend:
              service:
                name: firefly-iii
                port:
                  number: 80
              path: /
              pathType: Prefix
  tls:
    - hosts:
        - firefly.intropin.be
      secretName: firefly-letsencrypt-certificate
